src/objects/ShiharaiMeisaiData__c.object
<CustomObject>
    <fields>
        <fullName>Biko__c</fullName>
        <label>備考</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HachuMeisaiData__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>発注明細データ</label>
        <referenceTo>HachuMeisaiData__c</referenceTo>
        <relationshipLabel>支払明細データ</relationshipLabel>
        <relationshipName>ShiharaiMeisaiData_HachuMeisaiData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HatchuDempyoBango__c</fullName>
        <formula>HYPERLINK( 
 &quot;/apex/K01_Hachusho?HdId=&quot;&amp; HachuMeisaiData__r.HachuData__r.Id ,  
 HachuMeisaiData__r.HachuData__r.HachushoTitle__c  + &quot;-&quot; +
 HachuMeisaiData__r.HachuData__r.DenpyoNo__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>発注時の注文書を表示します。</inlineHelpText>
        <label>発注伝票番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KaikakeData__c</fullName>
        <label>買掛データ</label>
        <referenceTo>KaikakeData__c</referenceTo>
        <relationshipLabel>支払明細データ</relationshipLabel>
        <relationshipName>ShiharaiMeisaiData_KaikakeData</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MeisaiKingaku__c</fullName>
        <description>納価×納品数量</description>
        <formula>ShiharaiKakaku__c   *  NohinSuryo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>納価×納品数量</inlineHelpText>
        <label>明細金額小計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MeisaiZeigaku__c</fullName>
        <formula>FLOOR(MeisaiKingaku__c  *  Shohizeiritsu__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>明細金額小計×消費税率（小数点以下切捨て）</inlineHelpText>
        <label>明細税額小計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MeisaiZeikomi__c</fullName>
        <formula>FLOOR(MeisaiKingaku__c  +  MeisaiZeigaku__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>明細金額小計＋明細税額小計（小数点以下切捨て）</inlineHelpText>
        <label>明細税込小計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NohinSuryo__c</fullName>
        <defaultValue>0</defaultValue>
        <label>納品数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nohinbi__c</fullName>
        <inlineHelpText>支払計上を行う日付。
買掛データの締期間に合わせて集計される。</inlineHelpText>
        <label>計上日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShiharaiKakaku__c</fullName>
        <description>発注明細データ.購入価格</description>
        <inlineHelpText>発注明細データ.購入価格</inlineHelpText>
        <label>支払単価</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShohinShizai__c</fullName>
        <formula>HachuMeisaiData__r.ShohinShizaiM__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>商品資材名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shohizeiritsu__c</fullName>
        <description>発注明細データ.消費税率</description>
        <inlineHelpText>発注明細データ.消費税率</inlineHelpText>
        <label>消費税率</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaniKihon__c</fullName>
        <description>発注明細データ.単位基本</description>
        <formula>HachuMeisaiData__r.TaniPC__c</formula>
        <inlineHelpText>発注明細データ.単位基本</inlineHelpText>
        <label>単位基本</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaniOya__c</fullName>
        <description>発注明細データ.単位親</description>
        <formula>HachuMeisaiData__r.TaniCS__c</formula>
        <inlineHelpText>発注明細データ.単位親</inlineHelpText>
        <label>単位親</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaniSo__c</fullName>
        <description>発注明細データ.単位祖</description>
        <formula>HachuMeisaiData__r.TaniCT__c</formula>
        <inlineHelpText>発注明細データ.単位祖</inlineHelpText>
        <label>単位祖</label>
        <type>Text</type>
    </fields>
    <label>支払明細データ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>KaikakeData__c</columns>
        <columns>Nohinbi__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>支払明細-{0000000000}</displayFormat>
        <label>支払明細名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>